splitscreen sort overflow fix

--- a/css/NewCatalog.styl
+++ b/css/NewCatalog.styl
@@ -288,12 +288,17 @@
 	width 100%
 	margin-left 2%
 
+#newCatalogRoot #filterWrapper
+	width 100%
+	height auto
+	display inline
+
 #newCatalogRoot #filters
 	display inline
 
 #newCatalogRoot #filterByKeywords
 	display none
-	width 100%
+	//width 100%
 	float left
 	margin-top 2%
 	cursor auto
@@ -453,6 +458,11 @@
 	width 100%
 	z-index 100
 	display block
+
+#newCatalogRoot .sortButton
+	text-overflow ellipsis
+	overflow hidden
+	white-space nowrap
 
 #newCatalogRoot #sorts
 	display inline
@@ -726,7 +736,7 @@
 #newCatalogRoot .ui-dropdownchecklist-selector 
 	font-size 100%
 	width auto
-	max-width 150px
+	//max-width 150px
 
 #newCatalogRoot .ui-dropdownchecklist-selector:hover
 	overflow visible 
